--- a/app/app/src/main/res/layout/content_main.xml
+++ b/app/app/src/main/res/layout/content_main.xml
@@ -17,4 +17,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:text="content_main.xml" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
