colores de aplicacion

--- a/app/app/src/main/res/menu/main.xml
+++ b/app/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/actions_opciones"
+        android:orderInCategory="101"
+        android:title="Opciones"
+        app:showAsAction="never" />
 </menu>
