--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="Bluttec">#003889</color>
     <color name="Greeuttec">#459415</color>
     <color name="hidden">#00000000</color>
+    <color name="red">#FF4444</color>
 </resources>
