vistas de inicio de sesion y fragmento de base de datos

--- a/app/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Welcome">
+    tools:context=".welcome_views.ForgotPassword">
 
     <!-- Header -->
     <LinearLayout
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="Hola :D"
+            android:text="Recuperar contraseña"
             android:textSize="24dp"
             android:textColor="@color/white"/>
     </LinearLayout>
@@ -63,41 +63,36 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="Ingresa tu matrícula"
-                android:gravity="center"
-                android:layout_marginBottom="8dp"/>
+                android:gravity="center"/>
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/input_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Ingresa tu contraseña"
+                android:hint="Ingresa tu nueva contraseña"
+                android:gravity="center"/>
+
+            <EditText
+                android:id="@+id/input_password_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Confirma tu contraseña"
                 android:gravity="center"
                 android:layout_marginBottom="64dp"/>
 
             <Button
-                android:id="@+id/btn_access"
+                android:id="@+id/btn_set_new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Acceder"/>
+                android:text="establecer nueva contraseña"/>
 
             <Button
-                android:id="@+id/btn_signup"
+                android:id="@+id/btn_to_sign_in"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Registrarse"/>
-
-            <Button
-                android:id="@+id/btn_forgot"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="olvidé mi contraseña"/>
-
-            <Button
-                android:id="@+id/btn_exit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Salir"/>
+                android:text="Volver"/>
         </LinearLayout>
     </ScrollView>
 
