--- a/app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,20 +12,15 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.app.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
         android:id="@+id/nav_prueba"
         android:name="com.example.app.ui.prueba_fragmento.PruebaFragmento"
         android:label="Prueba"
         tools:layout="@layout/prueba_fragmento" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.app.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_profile"
+        android:name="com.example.app.ui.profile.ProfileFragment"
+        android:label="Perfil"
+        tools:layout="@layout/fragment_profile" />
+
 </navigation>
