--- a/app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,10 +9,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/nav_themes"
+            android:title="Temario" />
+        <item
             android:id="@+id/nav_profile"
             android:title="Perfil" />
-        <item
-            android:id="@+id/nav_prueba"
-            android:title="Prueba" />
     </group>
 </menu>
